--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,13 @@ a:active {
   background-color: #C68866;
   color: #F4F3EE;
   font-weight: 400;
+  line-height: 1;
   height: 30px;
   width: 130px;
   padding: 10px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 7px;
 }
 
@@ -89,10 +92,13 @@ a:active {
   background-color: #FFFFFF;
   color: #C68866;
   font-weight: 400;
+  line-height: 1;
   height: 30px;
   width: 150px;
   padding: 10px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 7px;
   border: 2px solid #C68866;
 }
