--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,16 @@ body {
 }
 
 h1, h2, h3 {
-  line-height: 1.4;
+  line-height: 1.2;
 }
 
 h1 {
-  font-size: 2.25em;
+  font-size: 1.75em;
   font-weight: 900;
 }
 
 h2 {
-  font-size: 1.65em;
+  font-size: 1.5em;
   font-weight: 900;
 }
 
@@ -39,12 +39,12 @@ img {
 }
 
 a {
-  color: #4A4A4A;
+  color: #F4F3EE;
   text-decoration: none;
 }
 
 a:visited {
-  color: #4A4A4A;
+  color: #F4F3EE;
 }
 
 a:hover,
@@ -62,7 +62,7 @@ a:active {
   color: #F4F3EE;
   font-weight: 400;
   line-height: 1;
-  height: 30px;
+  height: 26px;
   width: 130px;
   padding: 10px;
   display: flex;
@@ -93,7 +93,7 @@ a:active {
   color: #C68866;
   font-weight: 400;
   line-height: 1;
-  height: 30px;
+  height: 26px;
   width: 150px;
   padding: 10px;
   display: flex;
@@ -101,6 +101,7 @@ a:active {
   align-items: center;
   border-radius: 7px;
   border: 2px solid #C68866;
+  margin-bottom: 20px;
 }
 
 .button-img:visited {
@@ -116,4 +117,94 @@ a:active {
 .button-img:active {
   color: #C68866;
   text-decoration: none;
+}
+
+header {
+  background-color:#3D5A6C;
+  color:#F4F3EE;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  z-index:1;
+}
+
+footer {
+  color:#F4F3EE;
+  text-align: center;
+  align-content: center;
+  margin: 0;
+}
+
+/* Layout styling */
+
+.container {
+  max-width: 1200px;
+  padding: 10px;
+  margin: 0 ;
+}
+
+.Grid-proj {
+  padding: 20px 0;
+  border-bottom: 1px solid #3D5A6C;
+}
+
+.hero {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.hero-image {
+  max-width: 100%;
+  vertical-align: middle;
+  display: block;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  display: block;
+  align-items: center;
+  max-width: 760px;
+  color: #F4F3EE;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+.logo {
+  max-width: 250px;
+  display: block;
+  margin: 0 auto;
+}
+
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav > ul > li {
+  display: inline-block;
+}
+
+nav > ul > li > a {
+  padding: 0 8px;
+}
+
+main {
+  padding-top: 120px;
+}
+
+.button-container {
+  height: 50px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.center-button {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
