--- a/css/style.css
+++ b/css/style.css
@@ -45,52 +45,20 @@ a {
   text-decoration: none;
 }
 
-a:visited {
-  color: #F4F3EE;
-}
-
 a:hover,
 a:focus {
   color: #C68866;
-}
-
-a:active {
-  color: #F4F3EE;
 }
 
 a.publicaciones-link {
   color: #C68866;
 }
 
-a.publicaciones-link:visited {
-  color: #C68866;
-}
 
-a.publicaciones-link:hover,
-a:focus {
+a.publicaciones-link:hover {
   color: #3D5A6C;
 }
 
-a.publicaciones-link:active {
-  color: #C68866;
-}
-
-a.icon {
-  color: #F4F3EE;
-}
-
-a.icon:visited {
-  color: #F4F3EE;
-}
-
-a.icon:hover,
-a.focus {
-  color: #F4F3EE;
-}
-
-a.icon:active {
-  color: #F4F3EE;
-}
 
 .primary-button {
   background-color: #C68866;
@@ -262,7 +230,7 @@ main {
 }
 
 .button-container {
-  height: 80px;
+  height: 70px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -375,11 +343,24 @@ main {
     padding: 0;
   }
 
-  .navtoggle li:not(:last-child) {
-  display: inline-block;
+
+
+.navtoggle.responsive nav {
+  padding: unset;
+  margin-left: unset;
+}
+.navtoggle.responsive li  {
+  display: unset;
+  padding: unset;
+  border-top: unset;
+  text-align: unset;
+}
+
+.navtoggle li:not(:last-child) {
+display: inline-block;
 }
 .navtoggle li:last-child {
-  display: none;
+display: none;
 }
 
   main {
