--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,22 @@
 /*
 colors used:
-primary color (blue): #3D5A6C
-secondary color (ocre): #C68866
-text over white (dark gray): #4A4A4A
-text over dark bck (light gray): #F4F3EE
+primary color (blue): #3d5a6c
+secondary color (ocre): #a05f3c
+text over white (dark gray): #4a4a4a
+text over dark bck (light gray): #f4f3ee
 */
-
 body {
-  background-color: #FFFFFF;
+  background-color: #ffff;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.6;
-  color: #4A4A4A;
+  color: #4a4a4a;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   line-height: 1.2;
 }
 
@@ -41,28 +42,26 @@ img {
 }
 
 a {
-  color: #F4F3EE;
+  color: #f4f3ee;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #C68866;
+  color: #e4c6b6;
 }
 
 a.publicaciones-link {
-  color: #C68866;
+  color: #a05f3c;
 }
-
 
 a.publicaciones-link:hover {
-  color: #3D5A6C;
+  color: #3d5a6c;
 }
 
-
 .primary-button {
-  background-color: #C68866;
-  color: #F4F3EE;
+  background-color: #a05f3c;
+  color: #f4f3ee;
   font-weight: 400;
   line-height: 1;
   height: 26px;
@@ -76,24 +75,24 @@ a.publicaciones-link:hover {
 }
 
 .primary-button:visited {
-  color: #F4F3EE;
+  color: #f4f3ee;
   text-decoration: none;
 }
 
 .primary-button:hover {
-  color: #F4F3EE;
+  color: #f4f3ee;
   opacity: 0.7;
   text-decoration: none;
 }
 
 .primary-button:active {
-  color: #F4F3EE;
+  color: #f4f3ee;
   text-decoration: none;
 }
 
 .button-img {
-  background-color: #FFFFFF;
-  color: #C68866;
+  background-color: #ffff;
+  color: #a05f3c;
   font-weight: 400;
   line-height: 1;
   height: 26px;
@@ -103,53 +102,53 @@ a.publicaciones-link:hover {
   justify-content: center;
   align-items: center;
   border-radius: 7px;
-  border: 2px solid #C68866;
+  border: 2px solid #a05f3c;
   margin-bottom: 20px;
   transition-duration: 0.2s;
 }
 
 .button-img:visited {
-  color: #C68866;
+  color: #a05f3c;
   text-decoration: none;
 }
+
 .button-img:hover {
-  color: #C68866;
+  color: #a05f3c;
   opacity: 0.7;
   text-decoration: none;
 }
 
 .button-img:active {
-  color: #C68866;
+  color: #a05f3c;
   text-decoration: none;
 }
 
 header {
-  background-color:#3D5A6C;
-  color:#F4F3EE;
+  background-color: #3d5a6c;
+  color: #f4f3ee;
   position: fixed;
   width: 100%;
-  z-index:1;
+  z-index: 1;
 }
 
 footer {
-  color:#F4F3EE;
+  color: #f4f3ee;
   text-align: center;
   align-content: center;
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
 }
 
 /* Layout styling */
-
 .container {
   max-width: 1000px;
-  padding: 15px 10px 10px 10px;
+  padding: 15px 10px 10px;
   align-content: center;
   margin: auto;
 }
 
 .row {
   padding: 20px 0;
-  border-bottom: 1px solid #3D5A6C;
+  border-bottom: 1px solid #3d5a6c;
 }
 
 .row2 {
@@ -158,7 +157,7 @@ footer {
 
 .row3 {
   padding: 20px 0;
-  border-bottom: 1px solid #3D5A6C;
+  border-bottom: 1px solid #3d5a6c;
 }
 
 .hero {
@@ -179,7 +178,7 @@ footer {
   display: block;
   align-items: center;
   max-width: 650px;
-  color: #F4F3EE;
+  color: #f4f3ee;
   padding: 15px;
   margin: 15px auto;
 }
@@ -199,7 +198,8 @@ nav > ul {
   display: none;
 }
 
-.navtoggle, .navtoggle.responsive {
+.navtoggle,
+.navtoggle.responsive {
   position: relative;
 }
 
@@ -214,14 +214,15 @@ nav > ul {
   padding: 24px 0 0;
   margin-left: 200px;
 }
-.navtoggle.responsive li  {
+
+.navtoggle.responsive li {
   display: block;
   padding: 10px 0;
-  border-top: 0.1px solid #F4F3EE;
+  border-top: 0.1px solid #f4f3ee;
   text-align: right;
 }
 
-.navtoggle.responsive li:last-child  {
+.navtoggle.responsive li:last-child {
   padding: 0 0 10px;
 }
 
@@ -280,25 +281,22 @@ main {
   align-items: center;
 }
 
-
 .social-media {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .align-text {
   text-align: center;
 }
 
-
-
 .list {
-  border-bottom: 1px solid #3D5A6C;
-  padding-bottom:20px;
+  border-bottom: 1px solid #3d5a6c;
+  padding-bottom: 20px;
   margin-bottom: 15px;
 }
 
 .bio {
-  margin: 40px 0 0 0;
+  margin: 40px 0 0;
 }
 
 .publicaciones {
@@ -307,11 +305,11 @@ main {
 
 /* Medium devices (6440px and larger) */
 @media only screen and (min-width: 640px) {
-
   .logo {
     position: absolute;
     min-width: 250px;
   }
+
   nav {
     width: auto;
     float: right;
@@ -320,7 +318,6 @@ main {
   nav > ul {
     margin: 1em 0;
   }
-
 
   nav > ul > li > a {
     padding: 0 8px;
@@ -331,23 +328,25 @@ main {
     padding: 0;
   }
 
-.navtoggle.responsive nav {
-  padding: unset;
-  margin-left: unset;
-}
-.navtoggle.responsive li  {
-  display: unset;
-  padding: unset;
-  border-top: unset;
-  text-align: unset;
-}
+  .navtoggle.responsive nav {
+    padding: unset;
+    margin-left: unset;
+  }
 
-.navtoggle li:not(:last-child) {
-display: inline-block;
-}
-.navtoggle li:last-child {
-display: none;
-}
+  .navtoggle.responsive li {
+    display: unset;
+    padding: unset;
+    border-top: unset;
+    text-align: unset;
+  }
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+    display: none;
+  }
 
   main {
     padding-top: 65px;
@@ -396,80 +395,76 @@ display: none;
 
   .button-container {
     justify-content: flex-end;
-    align-items: center
+    align-items: center;
   }
-
 
   .button-container-left {
     justify-content: flex-start;
     align-items: center;
   }
 
+  .book-img {
+    width: 50%;
+  }
 
- .book-img {
-   width: 50%;
- }
+  .book-img-container {
+    margin-left: 15px;
+    justify-content: flex-start;
+    align-items: center;
+  }
 
- .book-img-container {
-   margin-left: 15px;
-   justify-content: flex-start;
-   align-items: center;
- }
+  .align-text {
+    text-align: right;
+    margin: 80px 0 0;
+  }
 
- .align-text {
-   text-align: right;
-   margin: 80px 0 0 0;
- }
+  .button-container-img {
+    height: 80px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
- .button-container-img {
-   height: 80px;
-   position: relative;
-   display: flex;
-   justify-content: center;
-   align-items: center;
- }
+  .button-container-img2 {
+    height: 100px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
 
- .button-container-img2 {
-   height: 100px;
-   position: relative;
-   display: flex;
-   justify-content: flex-end;
-   align-items: center;
- }
+  .no-margin {
+    margin: 0;
+  }
 
- .no-margin {
-   margin: 0;
- }
+  .list {
+    border-bottom: unset;
+    padding-bottom: 10px;
+  }
 
- .list {
-   border-bottom: unset;
-   padding-bottom:10px;
- }
+  .col-md-3 {
+    width: 18%;
+    text-align: right;
+  }
 
- .col-md-3 {
-   width: 18%;
-   text-align: right;
- }
- .col-md-9 {
-   width: 76%;
- }
+  .col-md-9 {
+    width: 76%;
+  }
 
- .row3 {
-   border-bottom: unset;
-   padding: unset;
- }
+  .row3 {
+    border-bottom: unset;
+    padding: unset;
+  }
 
-.Grid{
-  margin-bottom: 20px;
+  .Grid {
+    margin-bottom: 20px;
+  }
+
+  .margin-bottom {
+    margin-bottom: 20px;
+  }
 }
-
-.margin-bottom{
-  margin-bottom: 20px;
-}
-
-}
-
-
 
 /* Large devices (1024px and larger) */
 @media only screen and (min-width: 1024px) {
@@ -485,6 +480,7 @@ display: none;
     width: 12%;
     text-align: right;
   }
+
   .col-md-9 {
     width: 86%;
   }
