--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ h3 {
 
 img {
   width: 100%;
+  height: 100%;
 }
 
 a {
@@ -142,7 +143,6 @@ footer {
 .container {
   max-width: 1000px;
   padding: 15px 10px 10px;
-  align-content: center;
   margin: auto;
 }
 
@@ -227,7 +227,7 @@ nav > ul {
 }
 
 main {
-  padding-top: 70px;
+  padding-top: 68px;
 }
 
 .button-container {
@@ -303,7 +303,20 @@ main {
   margin: 40px 0;
 }
 
-/* Medium devices (6440px and larger) */
+.title-center {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.copyright {
+  margin-top: 60px;
+}
+
+.col-md-6_2 {
+  width: 99%;
+}
+
+/* Medium devices (640px and larger) */
 @media only screen and (min-width: 640px) {
   .logo {
     position: absolute;
